# maudit

./: .gitignore  hack.py  readme.md  requirements.txt  setup.cfg  setup.py
data/: example_netcdf.ncdf
data/example_maud_outputs/maud_output-methionine_cycle-20210308163837/samples/: inference_model-202103081638-1-stderr.txt  inference_model-202103081638-1-stdout.txt  inference_model-202103081638-1.csv  inference_model-202103081638-2-stderr.txt  inference_model-202103081638-2-stdout.txt  inference_model-202103081638-2.csv  inference_model-202103081638-3-stderr.txt  inference_model-202103081638-3-stdout.txt  inference_model-202103081638-3.csv  inference_model-202103081638-4-stderr.txt  inference_model-202103081638-4-stdout.txt  inference_model-202103081638-4.csv  input_data.json
data/example_maud_outputs/maud_output-methionine_cycle-20210308163837/user_input/: config.toml  experiments.csv  inits.json  methionine_cycle.toml  priors.csv
src/maudit/: main.py  plotting.py  utils.py
