[metadata]
name = maudit
url = https://github.com/biosustain/maudit
author = Novo Nordisk Foundation Center for Biosustainability, Technical University of Denmark
author_email = tedgro@dtu.dk
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License version 3
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
license = GNU General Public License version 3
description = Bayesian statistical models of metabolic networks
long_description = file: readme.md
keywords =
[options]
dependency_links =
    git+git://github.com/biosustain/Maud@master#egg=maud
zip_safe = True
include_package_data=True
install_requires =
    maud
    arviz>=0.11.2
    plotnine
    matplotlib
    typer
python_requires = >=3.7
packages = find:
package_dir =
     = src

[options.entry_points]
console_scripts =
    maudit = maudit.main:app

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
